{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 19,
  "lineage": "088d5330-0e8e-2a53-21b3-8b167d004d62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-050965f59be16a269",
            "public_dns": "ec2-15-207-148-229.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.148.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_os",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0447a12f28fddb066",
            "arn": "arn:aws:ec2:ap-south-1:684956208517:instance/i-0b6876f4bd46fb563",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6876f4bd46fb563",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myterrakey4",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-035f8a16cd93d3055",
            "private_dns": "ip-192-168-1-188.ap-south-1.compute.internal",
            "private_ip": "192.168.1.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-035d91865dbf82c06",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d441006b6cbe89c7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03912e0bf4c588b0b",
            "tags": {
              "Name": "mysql_os"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d441006b6cbe89c7"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.sec_grp_mysql",
            "aws_security_group.sec_grp_wp",
            "aws_subnet.terra_subnet1b",
            "aws_vpc.terra_vpc",
            "tls_private_key.myterrakey4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_os",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:684956208517:instance/i-0ccf3d52c8e228d08",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ccf3d52c8e228d08",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myterrakey4",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-012be7dff72f2a39d",
            "private_dns": "ip-192-168-0-159.ap-south-1.compute.internal",
            "private_ip": "192.168.0.159",
            "public_dns": "ec2-13-126-192-197.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.192.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-088b1e28817980cb0",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-085354afdda9df4f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7a1dadeb39db451",
            "tags": {
              "Name": "wp_os"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-085354afdda9df4f2"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.sec_grp_wp",
            "aws_subnet.terra_subnet1a",
            "aws_vpc.terra_vpc",
            "tls_private_key.myterrakey4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:internet-gateway/igw-008c979c1c0db2c85",
            "id": "igw-008c979c1c0db2c85",
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_ig"
            },
            "vpc_id": "vpc-01544e2f8d28d6a16"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terra_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050965f59be16a269",
            "id": "nat-06a32dbc3a8c02b6b",
            "network_interface_id": "eni-0f114f7b04e3da9b7",
            "private_ip": "192.168.0.204",
            "public_ip": "15.207.148.229",
            "subnet_id": "subnet-0e7a1dadeb39db451",
            "tags": {
              "Name": "terra_nat"
            }
          },
          "dependencies": [
            "aws_eip.terra_eip",
            "aws_subnet.terra_subnet1a",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_route1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-041492274ca8b8f0c",
            "owner_id": "684956208517",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008c979c1c0db2c85",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra_route1a"
            },
            "vpc_id": "vpc-01544e2f8d28d6a16"
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_route1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a28d019774ae061a",
            "owner_id": "684956208517",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06a32dbc3a8c02b6b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra_route1b"
            },
            "vpc_id": "vpc-01544e2f8d28d6a16"
          },
          "dependencies": [
            "aws_eip.terra_eip",
            "aws_nat_gateway.terra_nat",
            "aws_subnet.terra_subnet1a",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra_route_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d53fa4b2d9138626",
            "route_table_id": "rtb-041492274ca8b8f0c",
            "subnet_id": "subnet-0e7a1dadeb39db451"
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_route_table.terra_route1a",
            "aws_subnet.terra_subnet1a",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra_route_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e7473958d548b83",
            "route_table_id": "rtb-0a28d019774ae061a",
            "subnet_id": "subnet-03912e0bf4c588b0b"
          },
          "dependencies": [
            "aws_eip.terra_eip",
            "aws_nat_gateway.terra_nat",
            "aws_route_table.terra_route1b",
            "aws_subnet.terra_subnet1a",
            "aws_subnet.terra_subnet1b",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_grp_mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:security-group/sg-0d441006b6cbe89c7",
            "description": "Allows data for Private database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d441006b6cbe89c7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-085354afdda9df4f2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sec_grp_mysql",
            "name_prefix": "",
            "owner_id": "684956208517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec_grp_mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-01544e2f8d28d6a16"
          },
          "dependencies": [
            "aws_security_group.sec_grp_wp",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_grp_wp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:security-group/sg-085354afdda9df4f2",
            "description": "Allows SSH and HTTP for Public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085354afdda9df4f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec_grp_wp",
            "name_prefix": "",
            "owner_id": "684956208517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec_grp_wp"
            },
            "timeouts": null,
            "vpc_id": "vpc-01544e2f8d28d6a16"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:subnet/subnet-0e7a1dadeb39db451",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0e7a1dadeb39db451",
            "map_public_ip_on_launch": true,
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_subnet1a"
            },
            "vpc_id": "vpc-01544e2f8d28d6a16"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:subnet/subnet-03912e0bf4c588b0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-03912e0bf4c588b0b",
            "map_public_ip_on_launch": false,
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_subnet1b"
            },
            "vpc_id": "vpc-01544e2f8d28d6a16"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:vpc/vpc-01544e2f8d28d6a16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04ae9acfcaf09355e",
            "default_route_table_id": "rtb-026eb766590e86f22",
            "default_security_group_id": "sg-082c89d1331bcdb71",
            "dhcp_options_id": "dopt-061a4d6dd56f69fdf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01544e2f8d28d6a16",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-026eb766590e86f22",
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_vpc"
            }
          }
        }
      ]
    }
  ]
}